Closed Bug 1653905 Opened 4 years ago Closed 4 years ago

propagate the fix from bug 1645762 to nsDisplayMasksAndClipPaths::PaintMask

Categories

(Core :: Layout, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox80 --- fixed

People

(Reporter: tnikkel, Assigned: tnikkel)

Details

Attachments

(1 file)

No description provided.
Assignee: nobody → tnikkel
Status: NEW → ASSIGNED
Pushed by tnikkel@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3c5385bd993b Propagate the fix from bug 1645762 to nsDisplayMasksAndClipPaths::PaintMask. r=heycam
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: