Bug 1653905. Propagate the fix from bug 1645762 to nsDisplayMasksAndClipPaths::PaintMask. r=heycam

Differential Revision: https://phabricator.services.mozilla.com/D84126